*** WooCommerce Extension Changelog ***

# 1.4.5
    * Moved Auto-Void logic after the last try to find the Order in WC.
    * Lowered the maximum tries count when search for existing WC Order.

# 1.4.4
    * Added new checkout icon for the plugin.
    * Load front-end scripts and styles in separate methods.
    * Always pass userTokenId into the openOrder request. The decision for saving UPO is into the SDK.
    * Changed the logic when to call updateOrder.
    * Fix for the unexpected refresh of the Checkout SDK when try to pay.

# 1.4.3
    * Added option to save UPOs for Guest users, when the user try to buy a product with Subscription.
    * Added Auto-Void functionality in case of payment, but did not created Order in WC.

# 1.4.2
    * Added support for theme picking for SimplyConnect.
    * Added option to save logs into second log file - nuvei.log.
    * Added id attribute to the "Block Payment methods" setting "Clean" button.
    * Removed the "SDK Version" option into the plugin.
    * Fixed the problem with Chrome and plugin "Block Payment methods" dropdown.
    * Replaced safecharge domain into the endpoints with nuvei one, where is possible.
    * Split the requests response log.

# 1.4.1
    * Changed the value of sourceApplication and webMasterId values.
    * Fixed the problem when receive DMN from the CPanel.

# 1.4.0
    * Add support for WC Subscriptions plugin.
    * Added a script to remove the WCS Pay button on Thank-you page.
    * On Thank-you page hooks check if the order belongs to Nuvei.
    * Added PayPal as option for Rebillings with WCS only.
    * Added _nuveiPrevTransactionStatus custom field to the Order. It will be used in case of declined Void to return Order to original status.
    * Void button will be available only for orders with AuthCode.
    * For WCS Renewal order try to generate unique clientUniqueId parameter.

# 1.3.1