@@ -3,6 +3,7 @@
 # 1.4.5
     * Moved Auto-Void logic after the last try to find the Order in WC.
     * Lowered the maximum tries count when search for existing WC Order.
+    * Added _nuveiTransactions private Order meta field to save main data for each transaction.
 
 # 1.4.4
     * Added new checkout icon for the plugin.
